test_fixtures/number/decimal_point_at_eof.lox
// ParserError: UnexpectedToken found Eof at l2c4 expected Identifier
123.